# cinnamon

./: .gitignore  Cargo.toml  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: CI.yml
examples/: check_iob.rs  javascript_demo.js  log_treatment.rs  read_bg.rs  typescript_demo.ts
src/: client.rs  endpoints.rs  error.rs  lib.rs  node_bindings.rs  query_builder.rs
src/models/: devicestatus.rs  entries.rs  mod.rs  profile.rs  properties.rs  status.rs  treatments.rs  trends.rs
src/structs/: endpoints.rs  entries.rs  mod.rs  treatments.rs  trends.rs
tests/: integration_tests.rs
