[package]
name = "cinnamon"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/ItsLimeNade/cinnamon"
authors = ["Limenade"]
description = "A type-safe Nightscout client for Rust, aiming to simplify the interactions with the confusing Nightscout API."
homepage = "https://github.com/ItsLimeNade/cinnamon?tab=readme-ov-file#cinnamon"
readme = "./README.md"
license = "MIT"
keywords = ["diabetes", "nightscout", "api"]
categories = ["api-bindings", "asynchronous", "data-structures", "science::bioinformatics", "web-programming::http-client"]
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"] 

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.100"
url = "2.5.7"
chrono = "0.4.42"
sha1 = "0.10.6"
thiserror = "2.0.17"
futures = "0.3.31"
napi = {version = "3.8.2", features = ["async", "serde-json", "chrono_date"]}
napi-derive = "3.5.1"

[build-dependencies]
napi-build = "2.3.1"