[package]
name = "cinnamon"
version = "1.0.1"
edition = "2021"
repository = "https://github.com/ItsLimeNade/cinnamon"
authors = ["Limenade"]
description = "A type-safe Nightscout client for Rust, aiming to simplify the interactions with the confusing Nightscout API."
homepage = "https://github.com/ItsLimeNade/cinnamon?tab=readme-ov-file#cinnamon"
readme = "./README.md"
license = "MIT"
keywords = ["diabetes", "nightscout", "api"]
categories = ["api-bindings", "asynchronous", "data-structures", "science::bioinformatics", "web-programming::http-client"]

[lib]
crate-type = ["rlib"] 
doctest = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.49", features = ["full"] }
url = "2.5.8"
chrono = "0.4.43"
sha1 = "0.10.6"
thiserror = "2.0.18"
futures = "0.3.31"

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.49", features = ["full", "test-util"] }
serde_json = "1.0.149"